--- a/public/css/tab-services.css
+++ b/public/css/tab-services.css
@@ -123,8 +123,8 @@
 
 /* ------------ CSS FOR TABLE TD ------------ */
 .td-name a,
-.td_git-owner a,
-.td_git-lang a,
+.td-git-owner a,
+.td-git-lang a,
 .td-git-version a,
 .td-git-date a {
    color: rgb(0, 0, 0);
