--- a/views/tabs/services.njk
+++ b/views/tabs/services.njk
@@ -84,25 +84,25 @@
                   <th class="col-header header-git" id="col-head-git-rel-last" data-type="string"> Last Release</th>
                   <th class="col-header header-git" id="col-head-git-rel-date" data-type="date">   Date</th>
 
-                  <th class="col-header header-sonar-metric" id="col-head-sonar-coverage" data-type="string"> Coverage</th>
-                  <th class="col-header header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"> Bugs</th>
-                  <th class="col-header header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"> Code smell</th>
-                  <th class="col-header header-sonar-metric" id="col-head-sonar-vul"      data-type="number"> Vulnerabilities</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Coverage</span></th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"><span>Bugs</span></th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"><span>Code smell</span></th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-vul"      data-type="number"><span>Vulnerabilities</span></th>
 
                   <th class="col-header header-version" id="col-head-deptk-version"   data-type="string"> Version</th>
                   <th class="col-header header-version" id="col-head-deptk-runtime"   data-type="string"> Runtime</th>
 
-                  <th class="col-header header-ecs" id="col-head-ecs-cidev"   data-type="string"> cidev</th>
-                  <th class="col-header header-ecs" id="col-head-ecs-stag"    data-type="string"> staging</th>
-                  <th class="col-header header-ecs" id="col-head-ecs-live"    data-type="string"> live</th>
+                  <th class="col-header header-ecs" id="col-head-ecs-cidev"   data-type="string"><span>cidev</span></th>
+                  <th class="col-header header-ecs" id="col-head-ecs-stag"    data-type="string"><span>staging</span></th>
+                  <th class="col-header header-ecs" id="col-head-ecs-live"    data-type="string"><span>live</span></th>
 
                   <th class="col-header header-deptrack"  id="col-head-deptk-date"data-type="date"  >Last BOM</th>
-                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcrit" data-type="number">Critical</th>
-                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mhigh" data-type="number">High</th>
-                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mmed"  data-type="number">Medium</th>
-                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mlow"  data-type="number">Low</th>
-                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mvul"  data-type="number">Vulner.</th>
-                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcomp" data-type="number">Compon.</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcrit" data-type="number"><span>Critical</span></th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mhigh" data-type="number"><span>High</span></th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mmed"  data-type="number"><span>Medium</span></th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mlow"  data-type="number"><span>Low</span></th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mvul"  data-type="number"><span>Vulner.</span></th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcomp" data-type="number"><span>Compon.</span></th>
             </tr>
          </thead>
          <tbody>
