--- a/public/css/tab-services.css
+++ b/public/css/tab-services.css
@@ -6,7 +6,7 @@
 }
 
 .vertical-menu {
-  width: 10%; /* Approximately 10% of horizontal space */
+  width: 15%; /* Approximately 15% of horizontal space */
   min-width: 150px; /* set a minimum width */
   background-color: #f9f9f9;
   border-right: 1px solid #ccc;
@@ -20,6 +20,8 @@
   position: sticky;
   top: 0;
   padding-bottom: 10px;
+  background-color: #cccccc;
+  border-bottom: 1px solid #ccc;
   z-index: 10;
 }
 
@@ -31,7 +33,7 @@
 }
 
 .table-services-container {
-  width: 90%; /* Approximately 90% of horizontal space */
+  width: 85%; /* Approximately 85% of horizontal space */
   padding: 10px;
   overflow: auto; /* Enables both vertical and horizontal scrolling */
 }
@@ -41,7 +43,13 @@
   border-collapse: collapse;
 }
 
-.table-services-container th,
+.table-services-container th {
+  padding: 0;
+  border: 1px solid #ccc;
+  text-align: center;
+  white-space: nowrap; /* Prevents text from wrapping, enabling horizontal scrolling */
+}
+
 .table-services-container td {
   padding: 10px;
   border: 1px solid #ccc;
@@ -49,12 +57,13 @@
   white-space: nowrap; /* Prevents text from wrapping, enabling horizontal scrolling */
 }
 
+
 .table-services-container thead th {
   position: sticky;
   top: 0;
   background-color: #f1f1f1;
   z-index: 3; /* Ensures headers stay above the table body */
-  padding: 10px;
+  padding: 0;
 }
 .table-services-container thead tr:nth-child(2) th {
   top: 40px; /* value based on the height of the first row */
@@ -105,10 +114,11 @@
    }
 
 /* ------------ CSS FOR TABLE HEADER ------------ */
-.header-sonar-metric,
-.header-ecs,
-.header-dt-metric {
+.header-sonar-metric span,
+.header-ecs span,
+.header-dt-metric span {
    writing-mode: vertical-rl;
+   transform: scale(1);
 }    
 
 /* ------------ CSS FOR TABLE TD ------------ */
