--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,17 +1,17 @@
 /* public/css/styles.css */
 
-/* Reset and basic styles */
+/* Reset styles */
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
- 
+
  body, html {
    height: 100%;
    font-family: Arial, sans-serif;
  }
- 
+
  .fixed-header {
    position: fixed;
    top: 0;
@@ -25,7 +25,7 @@
    padding: 0 20px;
    z-index: 1000;
  }
- 
+
  .fixed-footer {
    position: fixed;
    bottom: 0;
@@ -39,7 +39,7 @@
    justify-content: center;
    z-index: 1000;
  }
- 
+
  .main-content {
    display: flex;
    flex-direction: column;
@@ -47,43 +47,61 @@
    padding-top: 60px; /* Height of header */
    padding-bottom: 40px; /* Height of footer */
  }
- 
+
  .tab-nav {
    background-color: #f4f4f4;
    border-bottom: 1px solid #ccc;
    z-index: 10;
  }
 
- 
+
  .tab-nav ul {
    list-style: none;
    display: flex;
  }
- 
+
  .tab-nav li {
    margin-right: 10px;
  }
- 
+
  .tab-nav a {
    display: block;
    padding: 15px 20px;
    text-decoration: none;
    color: #333;
  }
- 
+
  .tab-nav a.active {
    background-color: #ddd;
    font-weight: bold;
  }
- 
+
  .tab-content {
    flex: 1;
    padding: 0;
    overflow: auto; /* Enables both vertical and horizontal scrollbars if needed */
    background-color: #fff;
  }
-  
- /* ------------ HEADER LOGO ------------ */
+
+
+ .masterCheckbox {
+   position: sticky;
+   top: 0;
+   padding-bottom: 10px;
+   background-color: #cccccc;
+   border-bottom: 1px solid #ccc;
+   z-index: 10;
+ }
+
+ .vertical-menu  div {
+   margin-bottom: 10px;
+ }
+ .vertical-menu  div > div {
+   margin-left: 20px;
+ }
+
+ /* ------------ HEADER  ------------ */
+
       .header-container {
          display: flex;
          justify-content: space-between;
@@ -128,8 +146,61 @@
          color: white;
       }
 
+      .col-header {
+         font-size: 14px;
+         cursor: pointer;
+      }
+
+ /* ------------ FOOTER  ------------ */
       .footer-text {
          font-size: 12px;
          color: white;
          text-decoration: none;
-      }      
+      }
+
+/* ------------ CSS FOR SORTING THE TABLE ------------ */
+
+/* Change the cursor to pointer and add hover effect */
+.column-sort {
+   cursor: pointer;
+   color: inherit; /* maintain the text color */
+ }
+
+ .column-sort:hover {
+   text-decoration: underline;
+   color: blue; /* change the color on hover */
+ }
+
+ /* ------------ CSS FOR SHARE BUTTON & RESPONSE ------------ */
+
+#share-status-message {
+   display: none; /* Hidden by default */
+   margin-top: 10px;
+   padding: 5px 10px;
+   border-radius: 4px;
+   font-size: 14px;
+   position: relative;
+ }
+
+ #share-status-message.ok {
+   background-color: #d4edda;
+   color: #155724;
+   border: 1px solid #c3e6cb;
+ }
+
+ #share-status-message.error {
+   background-color: #f8d7da;
+   color: #721c24;
+   border: 1px solid #f5c6cb;
+ }
+
+ #share-status-icon {
+   margin-right: 5px;
+ }
+
+/* ------------ CSS FOR DATES ------------ */
+
+.days-ago {
+   font-style: italic;
+   color: #7689d3;
+}
