--- a/public/css/tab-services.css
+++ b/public/css/tab-services.css
@@ -13,23 +13,6 @@
   overflow: auto; /* Enables both vertical and horizontal scrolling */
 
   padding: 10px;
-
-}
-
-.masterCheckbox {
-  position: sticky;
-  top: 0;
-  padding-bottom: 10px;
-  background-color: #cccccc;
-  border-bottom: 1px solid #ccc;
-  z-index: 10;
-}
-
-.vertical-menu  div {
-  margin-bottom: 10px;
-}
-.vertical-menu  div > div {
-  margin-left: 20px;
 }
 
 .table-services-container {
@@ -45,7 +28,7 @@
 
 .table-services-container th {
   padding: 0;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   text-align: center;
   white-space: nowrap; /* Prevents text from wrapping, enabling horizontal scrolling */
 }
@@ -61,6 +44,7 @@
 .table-services-container thead th {
   position: sticky;
   top: 0;
+  /* border: 1px solid black; */
   background-color: #f1f1f1;
   z-index: 3; /* Ensures headers stay above the table body */
   padding: 0;
@@ -95,11 +79,6 @@
     .group-deptrack {
       background-color: #f6a8a8;
     }
-
-    .col-header {
-      font-size: 14px;
-      cursor: pointer;
-   }
    
    .header-service,
    .header-sonar-metric,
@@ -202,26 +181,6 @@
   color: #444aef;
 }
 
-/* ------------ CSS FOR DATES ------------ */
-
-.days-ago {
-font-style: italic;
-color: #7689d3;
-}
-
-/* ------------ CSS FOR SORTING THE TABLE ------------ */
-
-/* Change the cursor to pointer and add hover effect */
-.column-sort {
-  cursor: pointer;
-  color: inherit; /* maintain the text color */
-}
-
-.column-sort:hover {
-  text-decoration: underline;
-  color: blue; /* change the color on hover */
-}
-
 /* ------------ CSS FOR RUNTIME LIST ------------ */
 
 .td-runtime-info {
@@ -230,29 +189,3 @@ color: #7689d3;
   list-style-position: inside; /* Ensure bullet points align with the text */
  }
 
-/* ------------ CSS FOR SHARE BUTTON & RESPONSE ------------ */
-
- #share-status-message {
-  display: none; /* Hidden by default */
-  margin-top: 10px;
-  padding: 5px 10px;
-  border-radius: 4px;
-  font-size: 14px;
-  position: relative;
-}
-
-#share-status-message.ok {
-  background-color: #d4edda;
-  color: #155724;
-  border: 1px solid #c3e6cb;
-}
-
-#share-status-message.error {
-  background-color: #f8d7da;
-  color: #721c24;
-  border: 1px solid #f5c6cb;
-}
-
-#share-status-icon {
-  margin-right: 5px;
-}
