--- a/views/tabs/endol.njk
+++ b/views/tabs/endol.njk
@@ -1,3 +1,5 @@
+{% from "macros.njk" import addDaysAgo %}
+
 <link rel="stylesheet" href="/css/tab-endol.css">
 
 <div class="tab-endol-container">
@@ -34,9 +36,9 @@
             <th class="col-header header-cycle"           id="col-head-cycle"           data-type="string">Cycle</th>
             <th class="col-header header-rel-date"        id="col-head-rel-date"        data-type="string">Release Date</th>
             <th class="col-header header-lts"             id="col-head-lts"             data-type="string">LTS</th>
-            <th class="col-header header-eol"             id="col-head-eol"             data-type="string">EOL</th>
+            <th class="col-header header-eol"             id="col-head-eol"             data-type="date">EOL</th>
             <th class="col-header header-latest"          id="col-head-latest"          data-type="string">Latest</th>
-            <th class="col-header header-latest-rel-date" id="col-head-latest-rel-date" data-type="string">Latest Release Date</th>
+            <th class="col-header header-latest-rel-date" id="col-head-latest-rel-date" data-type="date">Latest Release Date</th>
          </tr>
       </thead>
       <tbody>
@@ -45,11 +47,11 @@
             <tr data-name="{{ project }}" data-version="{{ cycle.cycle }}">
                <td class="td-project">        {{ project }}</td>
                <td class="td-cycle">          {{ cycle.cycle }}</td>
-               <td class="td-rel-date">       {{ cycle.releaseDate }}</td>
+               <td class="td-rel-date"><span> {{ cycle.releaseDate}}</span>{{addDaysAgo( cycle.releaseDate ) }}</td>
                <td class="td-lts">            {{ cycle.lts }}</td>
-               <td class="td-eol">            {{ cycle.eol }}</td>
+               <td class="td-eol"><span>      {{ cycle.eol }}</span>{{addDaysAgo( cycle.eol ) }}</td>
                <td class="td-latest">         {{ cycle.latest }}</td>
-               <td class="td-latest-rel-date">{{ cycle.latestReleaseDate }}</td>
+               <td class="td-latest-rel-date"><span>{{ cycle.latestReleaseDate}}</span>{{addDaysAgo( cycle.latestReleaseDate ) }}</td>
             </tr>
             {% endfor %}
          {% endfor %}
