--- a/public/css/tab-services.css
+++ b/public/css/tab-services.css
@@ -8,7 +8,7 @@
 .vertical-menu {
   width: 15%; /* Approximately 15% of horizontal space */
   min-width: 150px; /* set a minimum width */
-  background-color: #f9f9f9;
+  background-color: #ddd;
   border-right: 1px solid #ccc;
   overflow: auto; /* Enables both vertical and horizontal scrolling */
 
