--- a/public/css/tab-endol.css
+++ b/public/css/tab-endol.css
@@ -43,6 +43,7 @@
 .table-endol-container thead th {
   position: sticky;
   top: 0;
+  border: 1px solid black;
   background-color: #f1f1f1;
   z-index: 3; /* Ensures header stays above table body */
   padding: 0;
