--- a/public/css/tab-services.css
+++ b/public/css/tab-services.css
@@ -44,7 +44,7 @@
 .table-services-container thead th {
   position: sticky;
   top: 0;
-  /* border: 1px solid black; */
+  border: 1px solid black;
   background-color: #f1f1f1;
   z-index: 3; /* Ensures headers stay above the table body */
   padding: 0;
