--- a/public/css/tab-endol.css
+++ b/public/css/tab-endol.css
@@ -1,58 +1,1 @@
-
-.tab-endol-container {
-  display: flex;
-  height: 100%;
-  padding-top: 0;
-}
-
-.vertical-menu {
-  width: 15%; /* Approximately 15% of horizontal space */
-  min-width: 150px; /* set a minimum width */
-  background-color: #ddd;
-  border-right: 1px solid #ccc;
-  overflow: auto; /* Enables both vertical and horizontal scrolling */
-
-  padding: 10px;
-}
-
-.table-endol-container {
-  width: 85%; /* Approximately 85% of horizontal space */
-  padding: 10px;
-  overflow: auto; /* Enables both vertical and horizontal scrolling */
-}
-
-.table-endol-container table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.table-endol-container th {
-  padding: 0;
-  /* border: 1px solid #ccc; */
-  text-align: center;
-  white-space: nowrap; /* Prevents text from wrapping, enabling horizontal scrolling */
-}
-
-.table-endol-container td {
-  padding: 10px;
-  border: 1px solid #ccc;
-  text-align: left;
-  white-space: nowrap; /* Prevents text from wrapping, enabling horizontal scrolling */
-}
-
-.table-endol-container thead th {
-  position: sticky;
-  top: 0;
-  border: 1px solid black;
-  background-color: #f1f1f1;
-  z-index: 3; /* Ensures header stays above table body */
-  padding: 0;
-}
-
-.table-endol-container tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
-
-.table-endol-container tbody tr td {
-  z-index: 1; /* Ensure table body rows stay behind headers */
-}
+/* public/css/tab/tab-endol.css */
