--- a/views/tabs/tab-endol.njk
+++ b/views/tabs/tab-endol.njk
@@ -2,8 +2,8 @@
 
 <link rel="stylesheet" href="/css/tab-endol.css">
 
-<div class="tab-endol-container">
-  <div class="vertical-menu">
+<div class="tab-container">
+  <div class="tab-container-left-col">
       <!-- Master checkbox to control all .name-checkbox -->
       <div class="masterCheckbox">
             <input type="checkbox" id="masterCheckbox-id">
@@ -26,9 +26,8 @@
       </form>
   </div>
 
-  <div class="table-endol-container">
+  <div class="tab-container-main-col">
     <table id="table-endol">
-
       <thead>
          <!-- Col Headers -->
          <tr>
