--- a/views/tabs/tab-services.njk
+++ b/views/tabs/tab-services.njk
@@ -41,8 +41,8 @@
 
 <link rel="stylesheet" href="/css/tab-services.css">
 
-<div class="tab-services-container">
-  <div class="vertical-menu">
+<div class="tab-container">
+  <div class="tab-container-left-col">
       <!-- Master checkbox to control all .name-checkbox -->
       <div class="masterCheckbox">
             <input type="checkbox" id="masterCheckbox-id">
@@ -65,7 +65,7 @@
       </form>
   </div>
 
-  <div class="table-services-container">
+  <div class="tab-container-main-col">
     <table id="table-services">
          <thead>
          <!-- Headers for Col groups -->
