--- a/views/layout.njk
+++ b/views/layout.njk
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="/css/styles.css">
    <script> window.shareLinkState = "{{ state | safe }}"; </script>
    <script src="/js/libs/pako/2.0.4/pako.min.js"></script>
-   {# <script src="/js/tabServices.js"></script> #}
+   <script src="/js/common.js"></script>
    <script src="/js/layout.js"></script>
 </head>
 <body>
