--- a/views/tabs/tab-endol.njk
+++ b/views/tabs/tab-endol.njk
@@ -27,7 +27,7 @@
   </div>
 
   <div class="tab-container-main-col">
-    <table id="table-endol">
+    <table id="tab-table-id">
       <thead>
          <!-- Col Headers -->
          <tr>
