--- a/views/tabs/tab-services.njk
+++ b/views/tabs/tab-services.njk
@@ -66,7 +66,7 @@
   </div>
 
   <div class="tab-container-main-col">
-    <table id="table-services">
+    <table id="tab-table-id">
          <thead>
          <!-- Headers for Col groups -->
             <tr>
