--- a/views/main.njk
+++ b/views/main.njk
@@ -7,7 +7,7 @@
    <script> window.shareLinkState = "{{ state | safe }}"; </script>
    <script src="/js/libs/pako/2.0.4/pako.min.js"></script>
    <script src="/js/common.js"></script>
-   <script src="/js/layout.js"></script>
+   <script src="/js/main.js"></script>
 </head>
 <body>
    <header class="fixed-header">
