add relative path

--- a/views/main.njk
+++ b/views/main.njk
@@ -3,11 +3,11 @@
 <head>
    <meta charset="UTF-8">
    <title>{{ title }}</title>
-   <link rel="stylesheet" href="/css/styles.css">
+   <link rel="stylesheet" href="{{basePath}}/css/styles.css">
    <script> window.compressedState = "{{ compressedState | default('') }}"; </script>
-   <script src="/js/libs/pako/2.0.4/pako.min.js"></script>
-   <script src="/js/common.js"></script>
-   <script src="/js/main.js"></script>
+   <script src="{{basePath}}/js/libs/pako/2.0.4/pako.min.js"></script>
+   <script src="{{basePath}}/js/common.js"></script>
+   <script src="{{basePath}}/js/main.js"></script>
 </head>
 <body>
    <header class="fixed-header">
@@ -35,7 +35,7 @@
       <nav class="tab-nav">
          <ul>
          {% for tab in tabs %}
-            <li><a href="#" class="tab-link" data-tab="{{ tab.key }}" id="tab-{{ tab.key }}-id">{{ tab.title }}</a></li>
+            <li><a href="{{basePath}}/#" class="tab-link" data-tab="{{ tab.key }}" id="tab-{{ tab.key }}-id">{{ tab.title }}</a></li>
          {% endfor %}
          </ul>         
       </nav>
