--- a/views/tabs/tab-endol.njk
+++ b/views/tabs/tab-endol.njk
@@ -1,6 +1,6 @@
 {% from "macros.njk" import addDaysAgo %}
 
-<link rel="stylesheet" href="/css/tab-endol.css">
+<link rel="stylesheet" href="{{basePath}}/css/tab-endol.css">
 
 <div class="tab-container">
   <div class="tab-container-left-col">
