--- a/views/tabs/tab-services.njk
+++ b/views/tabs/tab-services.njk
@@ -39,7 +39,7 @@
 
 
 
-<link rel="stylesheet" href="/css/tab-services.css">
+<link rel="stylesheet" href="{{basePath}}/css/tab-services.css">
 
 <div class="tab-container">
   <div class="tab-container-left-col">
